add proxy by feature

--- a/arui/WebContent/view/AllowanceMaster.view.xml
+++ b/arui/WebContent/view/AllowanceMaster.view.xml
@@ -19,5 +19,12 @@
 				      </items>
 				    </Tree>
 				</content>
+				<footer>
+					<Bar>
+						<contentMiddle>
+							<Label id="idUserName" />
+						</contentMiddle>
+					</Bar>
+				</footer>
 			</Page>
 </mvc:View>
