--- a/arui/WebContent/view/OncallAllowance.view.xml
+++ b/arui/WebContent/view/OncallAllowance.view.xml
@@ -60,9 +60,9 @@
 					<Toolbar ariaLabelledBy="Title3" class="sapUiMediumMarginBeginEnd">
 						<Title id="Title3" text="" level="H5" titleStyle="H5"/>
 						<ToolbarSpacer />
-						<Button id="edit" icon="sap-icon://edit" text="{i18n>edit}" enabled="false" press="handleEditPress"/>
-						<Button id="save" text="{i18n>save}" type="Emphasized" visible="false" press="handleSavePress" />
-						<Button id="cancel" text="{i18n>cancel}" visible="false" press="handleCancelPress" />
+						<Button id="edit" icon="sap-icon://edit" text="{i18n>edit}" enabled="false" visible="{assist>saved}" press="handleEditPress"/>
+						<Button id="save" icon="sap-icon://save" text="{i18n>save}" type="Emphasized" visible="{assist>edit}" press="handleSavePress" />
+						<Button id="cancel" icon="sap-icon://cancel" text="{i18n>cancel}" visible="{assist>edit}" press="handleCancelPress" />
 					</Toolbar>
 				
 				</f:content>
@@ -155,9 +155,9 @@
 				<Bar>
 					<contentRight>
 						<Button class="sapUiSmallMarginEnd" text="{i18n>sendToManager}"
-							type="Accept"  press="handleSendPress" />
-						<Button class="sapUiSmallMarginEnd" text="{i18n>add}"
-							type="Emphasized"  press="handleAddPress" />
+							type="Accept" enabled="{assist>saved}" press="handleSendPress" />
+						<Button class="sapUiSmallMarginEnd" text="{i18n>add}" icon="sap-icon://add"
+							type="Emphasized" enabled="{assist>saved}" press="handleAddPress" />
 						<!--Button id="saveAll" class="sapUiSmallMarginEnd" text="{i18n>processDelete}"
 							type="Emphasized" enabled="false" press="handleSaveAllPress" /-->
 					</contentRight>
