--- a/arui/WebContent/view/AllowanceDetail.view.xml
+++ b/arui/WebContent/view/AllowanceDetail.view.xml
@@ -15,6 +15,8 @@
 				<footer>
 					<Bar>
 						<contentRight>
+							<Button class="sapUiSmallMarginEnd" text="{i18n>exportToExcel}"
+								press="handleExportPress" />
 							<Button class="sapUiSmallMarginEnd" id="acceptAll" text="{i18n>acceptAll}"
 								type="Accept"  press="handleAcceptAllPress" />
 							<Button class="sapUiSmallMarginEnd" id="rejectAll" text="{i18n>rejectAll}"
