--- a/arui/WebContent/view/Home.view.xml
+++ b/arui/WebContent/view/Home.view.xml
@@ -35,7 +35,7 @@
 	            </NavigationListItem>
 	            <NavigationListItem 
 	            	visible="false"
-	            	text="{i18n>atype}" 
+	            	text="{i18n>atypeM}"
 	            	icon="sap-icon://legend" 
 	            	key="atype" class="menu">
 	            </NavigationListItem>
